--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secrets</title>
+    <title>Proinfocus Test APIs</title>
     <style>
         label { opacity: 0.5 }
         textarea { background-color: #f9f9f9 !important }
