--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="black">
     <title>Proinfocus Test APIs</title>
     <style>
         label { opacity: 0.5 }
@@ -64,5 +67,8 @@
     </div>
 
     <script src="main.js" type="module"></script>
+    <script>
+        navigator.serviceWorker && navigator.serviceWorker.register('sw.js')
+    </script>
 </body>
 </html>
