Fixed the Response Text <pre> tag scrolling horizontally

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <style>
         label { opacity: 0.5 }
         textarea { background-color: #f9f9f9 !important }
+        #result pre {
+            white-space: pre-line;
+            word-break: break-word;
+        }
     </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
