--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             white-space: pre-line;
             word-break: break-word;
         }
-        pre .green { color: green }
-        pre .red { color: red }
+        .green { color: green; font-weight: bold }
+        .red { color: red; font-weight: bold }
     </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
